objects/ANZ_Clause__c.object
<CustomObject>
    <fields>
        <fullName>ANZ_Clause_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ANZ Clause Master</label>
        <referenceTo>ANZ_Clause_Master__c</referenceTo>
        <relationshipName>ANZ_Clause</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Out_Clause__c</fullName>
        <label>Close Out Clause</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Insurance__c</fullName>
        <label>Clause Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>ANZ_Clause1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportynity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tender</fullName>
                </value>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>ANZ Contract</fullName>
                </value>
                <value>
                    <fullName>IR Special Pricing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ordering_and_Delivery__c</fullName>
        <label>Ordering and Delivery</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Packaging_and_Marking__c</fullName>
        <label>Packaging and Marking</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purchase_of_held_stock_on_termination_of__c</fullName>
        <label>Purchase of held stock on termination of</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ANZ Clause</label>
    <nameField>
        <label>ANZ Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ANZ Clause</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>